update description and link

--- a/config.yml
+++ b/config.yml
@@ -2,6 +2,6 @@ wechat_id: we-chat-tutorial #replace this with your wechat id
 help_message: your help message
 welcome_message:
   title: 微信公众账户开发指南
-  picture: www.test.com
+  picture: https://mp.weixin.qq.com/cgi-bin/getheadimg?fakeid=3097029212&r=975188&token=1685872554
   description: 欢迎您关注微信公众账户开发指南
-  link: linkedme.in
+  link: linkedme.in/2013/09/25/turoial-to-be-wechat-public-account-developer/
